<resources>
    <string name="app_name">StudentZone</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_page_logo">welcome page logo</string>
    <string name="login_logo">Login logo</string>
    <string name="admin">Admin</string>
    <string name="doctor">Doctor</string>
    <string name="student">Student</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="user_name">User Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="departments">Departments</string>
    <string name="subjects">Subjects</string>
    <string name="absence_files">Absence Files</string>
    <string name="doctors_accounts">Doctors Accounts</string>
    <string name="students_accounts">Students Accounts</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="scrolbar">Scrolbar</string>
    <string name="btn_floating_action">Add department</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="profile_add_photo_fb">Change Photo</string>
    <string name="edit">edit</string>
</resources>