<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_rl_main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Login_Classes.LoginActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/custom_view" />

    <ImageView
        android:id="@+id/activity_login_iv_loginlogo"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-10dp"
        android:contentDescription="@string/login_logo"
        app:srcCompat="@drawable/img_students"
        tools:srcCompat="@drawable/img_students" />

    <LinearLayout
        android:id="@+id/activity_login_ll_logincontainer"
        android:layout_width="match_parent"
        android:layout_height="443dp"
        android:layout_below="@id/top_view"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/activity_login_rg_userkind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/activity_login_rb_admin"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@android:color/transparent"
                android:buttonTint="#2196F3"
                android:drawableTop="@drawable/ic_admin"
                android:drawablePadding="-20dp"
                android:paddingLeft="10dp"
                android:fontFamily="@font/amaranth"
                android:minHeight="48dp"
                android:background="@drawable/custom_rb_selector"
                android:textAlignment="center"
                android:layout_marginRight="10dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/activity_login_rb_student"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_doctor"
                android:drawablePadding="-20dp"
                android:paddingLeft="10dp"
                android:background="@drawable/custom_rb_selector"
                android:buttonTint="#2196F3"
                android:textAlignment="center"
                android:layout_marginRight="10dp"
                android:button="@android:color/transparent"
                android:fontFamily="@font/amaranth"
                android:minHeight="48dp"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/activity_login_rb_doctor"
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_student"
                android:drawablePadding="-20dp"
                android:paddingLeft="10dp"
                android:background="@drawable/custom_rb_selector"
                android:button="@android:color/transparent"
                android:textAlignment="center"
                android:buttonTint="#2196F3"
                android:fontFamily="@font/amaranth"
                android:minHeight="48dp"
                android:textSize="20sp" />
        </RadioGroup>

        <EditText
            android:id="@+id/activity_login_tf_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_et_selector"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:fontFamily="@font/amaranth"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/activity_login_tf_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_et_selector"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp" />

        <!--        <CheckBox-->
<!--            android:id="@+id/activity_login_cb_rememberme"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="50dp"-->
<!--            android:layout_marginRight="50dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:buttonTint="#2196F3"-->
<!--            android:minHeight="48dp"-->
<!--            android:text="@string/remember_me"-->
<!--            android:textSize="18sp" />-->

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/aclonica"
            android:background="@drawable/custom_btn_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/activity_login_tv_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="50dp"
            android:fontFamily="@font/amaranth"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>