<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_system_adminstrator_rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Classes.Admin_Activities.AdminHomeActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/custom_view" />

    <TextView
        android:id="@+id/activity_admin_home_tv_profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-31dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/activity_admin_home_btn_profile"
        android:background="@drawable/custom_tv_name_profile"
        android:paddingLeft="35dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="youssef ramadan"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/activity_admin_home_btn_profile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_btn_profile"
        android:drawableRight="@drawable/ic_male_doctor"
        android:paddingRight="10dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />



    <Button
        android:id="@+id/activity_admin_home_btn_logout"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_btn_logout"
        android:drawableRight="@drawable/ic_logout"
        android:paddingRight="2.5dp"
        android:rotation="180"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:layout_marginRight="3dp"/>

    <TextView
        android:id="@+id/activity_admin_home_tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Home"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <GridLayout
        android:id="@+id/activity_admin_home_gl_cardscontainer"
        android:layout_width="363dp"
        android:layout_height="600dp"
        android:layout_below="@id/top_view"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="25dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_admin_home_cv_departments"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/activity_admin_home_ll_departments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_admin_home_iv_departments"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_department_1"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/departments"
                    android:textColor="@color/dark_blue"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_admin_home_cv_subjects"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/activity_admin_home_ll__subjects"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_admin_home_iv_subjects"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_subjects"/>

                <TextView
                    android:id="@+id/activity_admin_home_tv_subjects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/subjects"
                    android:textColor="@color/dark_blue"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_admin_home_cv_doctors_accounts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            android:layout_marginBottom="200dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/activity_admin_home_ll_doctors_accounts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_admin_home_iv_doctors_accounts"
                    android:layout_width="106dp"
                    android:layout_height="92dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_doctors" />

                <TextView
                    android:id="@+id/activity_admin_home_tv_doctors_accounts"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/doctors_accounts"
                    android:textColor="@color/dark_blue"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/activity_admin_home_cv_students_accounts"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="200dp"
            android:contextClickable="false"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true">

            <LinearLayout
                android:id="@+id/activity_admin_home_ll_students_accounts"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_sadmin_home_iv_students_accounts"
                    android:layout_width="150dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_students" />

                <TextView
                    android:id="@+id/activity_admin_home_tv_students_accounts"
                    android:layout_width="100dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/students_accounts"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:layout_marginTop="-25dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>